remove media loader from sidebar buttons that opens media modal

--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -17,7 +17,7 @@
         type="button"
         class="
             sidebar--btn-media
-            media-loader
+            sidebar--btn-media-open-modal
             btn
             btn-dark
             m-0
