--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -290,11 +290,19 @@
         </div>
     </div>
 
-    <div id="modal-media-img-template" class="d-none">
-        <div
-            class="img img-background square-10 mt-2"
-        ></div>
+    <div class="d-none">
+        <button
+            id="initiate_media_loading_on_page_load"
+            class="media-loader"
+        ></button>
+
+        <div id="modal-media-img-template" class="d-none">
+            <div
+                class="img img-background square-10 mt-2"
+            ></div>
+        </div>
     </div>
+
 {% endblock %}
 
 {% block scriptsbottom %}
@@ -318,9 +326,7 @@
     async function loadMedias(me) {
         let loader = me;
 
-        const targetContent = me.attr('data-content-target');
-
-        if (targetContent !== undefined && !mediaLibraryConfig.lock) {
+        if (!mediaLibraryConfig.lock) {
             mediaLibraryConfig.lock = true;
             const uri = mediaLibraryConfig.baseUri  + '/' + mediaLibraryConfig.loadLimit + '/' + mediaLibraryConfig.loadOffset;
 
@@ -403,10 +409,10 @@
                         const parent = me.parent();
                         const targetClick = $(parent.attr('data-click-target'));
                         const mediaIdField = $(parent.attr('data-media-id-field'));
-                        const targetClickMask = $(parent.attr('data-click-target-mask'));
+                        // const targetClickMask = $(parent.attr('data-click-target-mask'));
 
                         mediaIdField.attr('value', mediaId);
-                        targetClickMask.attr('value', true);
+                        // targetClickMask.attr('value', true);
                         console.log(mediaIdField.attr('value'));
                         targetClick.trigger('click');
                     });
@@ -467,6 +473,7 @@
         const targetId = myId.replace('removeBtn', 'toRemove')
             .replace('generateBtn', 'toGenerate')
             .replace('getFromStockBtn', 'toGetFromStock')
+            .replace('getFromCatalogBtn', 'toSetFromCatalog')
             .replace('saveBtn', 'toSave')
             .replace('previewBtn', 'toPreview')
         ;
@@ -526,7 +533,7 @@
     })
 
     // find content
-    $('.modal--tab-media-btn-prev, .modal--tab-media-btn-next').on('click', function(event, data) {
+    $('.modal--tab-media-btn-prev, .modal--tab-media-btn-next, .sidebar--btn-media-open-modal').on('click', function(event, data) {
         event.preventDefault();
 
         const me = $(this);
@@ -534,5 +541,10 @@
 
         return false;
     })
+
+    $(document).ready(function() {
+        //load first images to modal media library
+        $('#initiate_media_loading_on_page_load').trigger('click');
+    });
 </script>
 {% endblock %}
