--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -1,14 +1,14 @@
 <div>
     <div class="d-none">
-        {{ form_row(form.toRemove) }}
-        {{ form_row(form.toGenerate) }}
-        {{ form_row(form.toGetFromStock) }}
-        {{ form_row(form.toSetFromCatalog) }}
-        {{ form_row(form.systemId) }}
-        {{ form_row(form.removeBtn) }}
-        {{ form_row(form.generateBtn) }}
-        {{ form_row(form.getFromStockBtn) }}
-        {{ form_row(form.getFromCatalogBtn) }}
+        {{ form_row(form.toRemove, {'label': false}) }}
+        {{ form_row(form.toGenerate, {'label': false}) }}
+        {{ form_row(form.toGetFromStock, {'label': false}) }}
+        {{ form_row(form.toSetFromCatalog, {'label': false}) }}
+        {{ form_row(form.systemId, {'label': false}) }}
+        {{ form_row(form.removeBtn, {'label': false}) }}
+        {{ form_row(form.generateBtn, {'label': false}) }}
+        {{ form_row(form.getFromStockBtn, {'label': false}) }}
+        {{ form_row(form.getFromCatalogBtn, {'label': false}) }}
     </div>
 
     <!-- Button trigger modal -->
@@ -167,7 +167,7 @@
                                     id="{{ form.vars.id }}_media_catalog_content"
                                     class="media-catalog d-flex flex-row flex-wrap justify-content-between mb-5 w-100"
                                 >
-
+                                    <!-- EMPTY PLACE FOR LOADED MEDIA THUMBNAILS -->
                                 </div>
 
                                 <div class="d-flex flex-row justify-content-between align-items-baseline w-100 pb-3">
@@ -247,25 +247,56 @@
                         </div>
 
                         <div class="tab-pane fade" id="{{ form.vars.id }}_modal_upload" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_upload-tab" tabindex="0">
-                            {{ form_row(form.file) }}
-                            <button
-                                id="{{ form.vars.id }}_media_upload_previewBtn"
-                                type="button"
-                                class="
-                                    formSubmit
-                                    modal--nav-media-btn
-                                    btn
-                                    btn-dark
-                                    m-0
-                                    border-0
-                                    shadow-none
-                                    rounded-0
-                                    p-3
-                                    ms-1
-                                "
-                            >
-                                Upload
-                            </button>
+                            <div class="tab-pane-content d-flex flex-column justify-content-between align-items-baseline">
+
+                                <div>
+
+                                    {{ form_row(form.file, {'label': false, 'attr': {
+                                        'data-content-target': '#' ~ form.vars.id ~ '_media_choose_file_content',
+                                        'class': 'file-upload  with-preview d-none'
+                                    }}) }}
+                                    <label
+                                        for="{{ form.file.vars.id }}"
+                                        id="{{ form.vars.id }}_media_chooseFileBtn"
+                                        type="button"
+                                        class="
+                                            btn
+                                            btn-dark
+                                            border-0
+                                            shadow-none
+                                            rounded-0
+                                            p-3
+                                            m-auto
+                                        "
+                                    >
+                                        Choose image from your drive
+                                    </label>
+                                    <div class="m-auto help-text">Supported image extensions: <b>jpg, jpeg, png, webp, svg</b></div>
+                                </div>
+
+                                <img id="{{ form.vars.id }}_media_choose_file_content" class="px-4 py-2 mw-100 d-none" alt="uploaded file" title="uploaded file"/>
+
+                                <div class="d-flex flex-row justify-content-between align-items-baseline w-100 pb-3">
+                                    <button
+                                        id="{{ form.vars.id }}_media_upload_previewBtn"
+                                        type="button"
+                                        class="
+                                            formSubmit
+                                            modal--nav-media-btn
+                                            btn
+                                            btn-dark
+                                            m-0
+                                            border-0
+                                            shadow-none
+                                            rounded-0
+                                            p-3
+                                            ms-1
+                                        "
+                                    >
+                                        Upload
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="{{ form.vars.id }}_modal_random" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_random-tab" tabindex="0">
 
